<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_info"
            android:title="@string/mian_info" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_done"
            android:title="@string/results" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_next"
            android:title="@string/nearest_fights" />

        <item
            android:id="@+id/nav_p4p"
            android:icon="@drawable/ic_baseline_person"
            android:title="@string/p4p" />

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_baseline_fiber_news"
            android:title="@string/news" />
    </group>
</menu>