<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mmapromotionsnews.presentation.ui.mian_info.InfoFragment"
        android:label="@string/mian_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mmapromotionsnews.presentation.ui.results.ResultFragment"
        android:label="@string/results"
        tools:layout="@layout/fragment_result" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.mmapromotionsnews.presentation.ui.fixtures.FixturesFragment"
        android:label="@string/nearest_fights"
        tools:layout="@layout/fragment_fixtures" />

    <fragment
        android:id="@+id/nav_p4p"
        android:name="com.example.mmapromotionsnews.presentation.ui.p4p.PoundFPFragment"
        android:label="@string/p4p"
        tools:layout="@layout/fragment_pound_f_p" />

    <fragment
        android:id="@+id/nav_news"
        android:name="com.example.mmapromotionsnews.presentation.ui.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />
</navigation>